[package]
name = "webrogue-android"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[features]
launcher = ["webrogue-wasmtime/jit", "dep:jni", "dep:serde_json", "webrogue-gfxstream/lib-impl"]
runner = ["webrogue-wasmtime/aot", "webrogue-gfxstream/lib-impl"]

[lib]
name = "webrogue"
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
webrogue-wasmtime = { workspace = true }
winit = { workspace = true }
webrogue-gfxstream = { workspace = true }
webrogue-gfx-winit = { workspace = true }
jni = { version = "0.21", optional = true }
serde_json = { workspace = true, optional = true }

[target.'cfg(target_os = "android")'.dependencies]
winit-android = { workspace = true }
android-activity = { workspace = true, features = ["native-activity"] }
log = { workspace = true }
android_logger = { workspace = true }
ndk-sys = { workspace = true }
ndk = { workspace = true }
