[package]
name = "webrogue-aot-compiler"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
default = []
llvm = ["dep:webrogue-aot-linker", "webrogue-aot-linker/build-llvm"]

[dependencies]
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
webrogue-aot-linker = { workspace = true, optional = true }
wasmtime = { workspace = true, default-features = false, features = ["cranelift", "all-arch", "threads", "parallel-compilation"] }
webrogue-wrapp = { workspace = true }
object = { workspace = true, default-features = false, features = ['read_core', 'write_core', 'elf'] }
wasmtime-environ = { workspace = true, default-features = false }
image = { workspace = true, default-features = false, features = ["png", "rayon", "webp"] }
imageproc = { workspace = true, default-features = false, features = ["rayon"] }
postcard = { workspace = true, default-features = false, features = ['alloc'] }
serde = { workspace = true, features = ['derive'] }
