[package]
name = "webrogue-aot-compiler"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = []
llvm = ["dep:webrogue-lld", "webrogue-lld/link-llvm"]
appended_artifacts = []

[dependencies]
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
webrogue-lld = { workspace = true, optional = true }
webrogue-icons = { workspace = true, features = ['rayon'] }
wasmtime = { workspace = true, default-features = false, features = ["cranelift", "all-arch", "threads", "parallel-compilation", "cache", "anyhow"] }
webrogue-wrapp = { workspace = true, features = ["write"] }
object = { workspace = true, default-features = false, features = ['read_core', 'write_core', 'elf', 'macho', 'coff'] }
wasmtime-environ = { workspace = true, default-features = false }
postcard = { workspace = true, default-features = false, features = ['alloc'] }
serde = { workspace = true, features = ['derive'] }
zip  = { workspace = true, default-features = false, features = ['deflate'] }
