[package]
name = "webrogue-aot-data"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
compiling = ["dep:cc", "dep:webrogue-aot-compiler"]

[build-dependencies]
cc = { workspace = true, optional = true }
webrogue-aot-compiler = { workspace = true, optional = true }
