[package]
name = "webrogue-aot-lib"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[lib]
# crate-type=["cdylib"]
crate-type=["staticlib"]

[features]
# gfx-fallback-cmake = ["webrogue-gfx/fallback", "dep:webrogue-gfx-fallback", "webrogue-gfx-fallback/sdl3", "webrogue-gfx-fallback/cmake", "dep:webrogue-gfxstream", "webrogue-gfxstream/cmake"]
# gfx-fallback-cc = ["webrogue-gfx/fallback", "dep:webrogue-gfx-fallback", "webrogue-gfx-fallback/sdl3", "webrogue-gfx-fallback/cc", "dep:webrogue-gfxstream", "webrogue-gfxstream/cc"]
gfx-fallback-cmake = []
gfx-fallback-cc = []


[dependencies]
webrogue-wasmtime = { workspace = true, features = ["aot"] }
webrogue-gfx = { workspace = true }
webrogue-gfx-sdl = { workspace = true }
webrogue-gfxstream = { workspace = true, optional = true }
dirs = { workspace = true }

[target.'cfg(target_env = "msvc")'.dependencies]
blake3 = { version = "1", features = ["pure"] }
