[package]
name = "webrogue-aot-lib"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[lib]
# crate-type=["cdylib"]
crate-type=["staticlib"]

[features]
build-gfxstream-cc = ["webrogue-gfxstream/cc"]


[dependencies]
webrogue-wasmtime = { workspace = true, features = ["aot"] }
webrogue-gfxstream = { workspace = true, optional = true }
dirs = { workspace = true }
webrogue-gfx-winit = { workspace = true }

[target.'cfg(target_env = "msvc")'.dependencies]
blake3 = { version = "1", features = ["pure"] }
