[package]
name = "webrogue-backend-wasmer"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
singlepass = ["wasmer/engine", "wasmer/singlepass"]
cranelift = ["wasmer/engine", "wasmer/cranelift"]
llvm = ["wasmer/engine", "wasmer/llvm"]
jsc = ["wasmer/jsc", "wasmer/std"]
aot = ["wasmer/sys", "wasmer/static-artifact-load"]
wamr = ["wasmer/wamr"]

[dependencies]
webrogue-runtime = { workspace = true }
anyhow = { workspace = true }
wasmer = { workspace = true, default-features = false }
webrogue-backend-wasmer-macro = { workspace = true }

[build-dependencies]
cc = { workspace = true }
# wasmer = { workspace = true, default-features = false, features = ["static-artifact-load", "llvm"] }
