[package]
name = "webrogue_backend_wasmer"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
singlepass = ["wasmer/jit", "wasmer/singlepass"]
cranelift = ["wasmer/jit", "wasmer/cranelift"]
llvm = ["wasmer/jit", "wasmer/llvm"]
jsc = ["wasmer/jsc", "wasmer/std"]

[dependencies]
webrogue_runtime = { workspace = true }
anyhow = { workspace = true }
wasmer = { version = "4.3.1", default-features = false }
webrogue_backend_wasmer_macro = { workspace = true }
