[package]
name = "webrogue_backend_wasmtime"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
# All default but async and profiling features
wasmtime = { workspace = true, default-features = false, features = ["cache", "gc", "wat", "parallel-compilation", "cranelift", "pooling-allocator", "demangle", "addr2line", "coredump", "debug-builtins", "runtime", "component-model", "threads", "std"] }
webrogue_runtime = { workspace = true }
anyhow = { workspace = true }
webrogue_backend_wasmtime_macro = { workspace = true }
