[package]
name = "webrogue-cli"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[features]
run = ["dep:webrogue-wasmtime", "dep:webrogue-gfx", "dep:webrogue-gfx-fallback", "dep:webrogue-gfxstream"]
compile = ["dep:webrogue-aot-compiler"]
pack = ["dep:webrogue-wrapp"]
llvm = ["webrogue-aot-compiler/llvm"]
appended_artifacts = ["webrogue-aot-compiler/appended_artifacts"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }

webrogue-wasmtime = { workspace = true, features = ["cranelift"], optional = true }
webrogue-gfx = { workspace = true, features = ["fallback"], optional = true }
webrogue-gfx-fallback = { workspace = true, features = ["sdl3", "cmake"], optional = true }
webrogue-gfxstream = { workspace = true, features = ["cc"], optional = true }
webrogue-aot-compiler = { workspace = true, optional = true }
webrogue-wrapp = { workspace = true, features = ["write"], optional = true }
