[package]
name = "webrogue-cli"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[features]
run = ["dep:webrogue-wasmtime", "dep:webrogue-gfx-winit", "dep:webrogue-gfxstream", "dep:webrogue-wrapp"]
compile = ["dep:webrogue-aot-compiler"]
pack = ["dep:webrogue-wrapp"]
hub = ["dep:webrogue-hub-client"]
llvm = ["webrogue-aot-compiler/llvm"]
appended_artifacts = ["webrogue-aot-compiler/appended_artifacts"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }

webrogue-wasmtime = { workspace = true, features = ["jit", "cache"], optional = true }
webrogue-gfx-winit = { workspace = true, optional = true }
webrogue-gfxstream = { workspace = true, features = ["cc"], optional = true }
webrogue-aot-compiler = { workspace = true, optional = true }
webrogue-wrapp = { workspace = true, features = ["write"], optional = true }
webrogue-hub-client = { workspace = true, optional = true }
