[package]
name = "webrogue-default-runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
singlepass = ["webrogue-runtime/singlepass"]
cranelift = ["webrogue-runtime/cranelift"]
llvm = ["webrogue-runtime/llvm"]
wamr = ["webrogue-runtime/wamr"]
aot = ["webrogue-runtime/aot", "dep:webrogue-aot-data"]

[dependencies]
webrogue-runtime = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
webc = { workspace = true }
wasmer-package = { workspace = true }

webrogue-aot-data = { workspace = true, features = ["compiling"], optional = true }
webrogue-gfx = { workspace = true, features = ["fallback"] }
webrogue-gfx-fallback = { workspace = true, features = ["sdl2", "cmake"] }
webrogue-gfxstream = { workspace = true, features = ["cc"] }

# TODO macos only
[build-dependencies]
reqwest = { workspace = true, features = ["blocking"] }
zip-extract = { workspace = true }
