[package]
name = "webrogue-default-runtime"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[features]
cranelift = ["webrogue-wasmtime/cranelift"]
aot = ["webrogue-wasmtime/aot", "dep:webrogue-aot-data"]
cache = ["webrogue-wasmtime/cache"]

[dependencies]
webrogue-wasmtime = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }


webrogue-aot-data = { workspace = true, features = ["compiling"], optional = true }
webrogue-gfx = { workspace = true, features = ["fallback"] }
webrogue-gfx-fallback = { workspace = true, features = ["sdl2", "cmake"] }
webrogue-gfxstream = { workspace = true, features = ["cc"] }

# TODO macos only
[build-dependencies]
reqwest = { workspace = true, features = ["blocking"] }
zip-extract = { workspace = true }
