[package]
name = "webrogue_default_runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
default = ["backend_wasmer_aot", "wasi_sync", "gl"]

backend_v8 = ["dep:webrogue_backend_v8"]
backend_wasmer_cranelift = ["_backend_wasmer", "webrogue_backend_wasmer/cranelift"]
backend_wasmer_llvm = ["_backend_wasmer", "webrogue_backend_wasmer/llvm"]
backend_wasmer_singlepass = ["_backend_wasmer", "webrogue_backend_wasmer/singlepass"]
backend_wasmer_aot = ["_backend_wasmer", "webrogue_backend_wasmer/aot"]
backend_wasmer_wamr = ["_backend_wasmer", "webrogue_backend_wasmer/wamr"]
backend_wasmtime = ["dep:webrogue_backend_wasmtime"]
_backend_wasmer = ["dep:webrogue_backend_wasmer"]

wasi_sync = ["dep:webrogue_wasi_sync"]

gl = ["_gfx", "dep:webrogue_gl"]
_gfx = ["dep:webrogue_gfx", "dep:webrogue_gfx_rust_sdl"]

[dependencies]
webrogue_runtime = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
webrogue_wasi = { workspace = true }

webrogue_gl = { workspace = true, optional = true }
webrogue_gfx = { workspace = true, optional = true }
webrogue_gfx_rust_sdl = { workspace = true, optional = true }
webrogue_gfx_ffi = { workspace = true, optional = true }
webrogue_backend_v8 = { workspace = true, optional = true }
webrogue_backend_wasmer = { workspace = true, optional = true }
webrogue_backend_wasmtime = { workspace = true, optional = true }
webrogue_std_stream_os = { workspace = true }
webrogue_wasi_sync = { workspace = true, optional = true }

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
webrogue_gfx_rust_sdl = { workspace = true, optional = true, features = ["sdl_static", "sdl_bundled"] }

[target.'cfg(not(any(target_os = "macos", target_os = "windows")))'.dependencies]
webrogue_gfx_rust_sdl = { workspace = true, optional = true, features = [] }
