[package]
name = "webrogue-events-macro"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
webrogue-events = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[lib]
proc-macro = true
