[package]
name = "webrogue-gfx-winit"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[features]
static-vk = ["dep:reqwest", "dep:tar"]

[dependencies]
anyhow = { workspace = true }
webrogue-gfx = { workspace = true }
winit = { workspace = true, default-features = true }
softbuffer = { workspace = true, default-features = true }

ash = { workspace = true, features = ["std", "loaded"], default-features = false }
ash-window = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

[build-dependencies]
reqwest = { workspace = true, features = ["blocking"], optional = true }
tar = { workspace = true, optional = true }