[package]
name = "webrogue-gfx"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
fallback = ["dep:webrogue-gfx-fallback"]

[dependencies]
anyhow = { workspace = true }
# wasmer = { workspace = true, default-features = false }
webrogue-gfxstream = { workspace = true }
webrogue-gfx-fallback = { workspace = true, optional = true }
wiggle = { workspace = true, default-features = false, features = ["wasmtime"] }
wasmtime = { workspace = true, default-features = false, features = ["runtime"] }
