[package]
name = "webrogue-gfx"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
webrogue-gfxstream = { workspace = true }
webrogue-events-macro = { workspace = true }
wiggle = { workspace = true, default-features = false }
ash = { workspace = true, features = ["std", "loaded"], default-features = false }
