[package]
name = "webrogue-gfx"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
webrogue-events-macro = { workspace = true }
wiggle = { workspace = true, default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ash = { workspace = true, features = ["std", "loaded"], default-features = false }
webrogue-gfxstream = { workspace = true }
