[package]
name = "webrogue_gfx_rust_sdl"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
sdl_static = ["sdl2/static-link"]
sdl_bundled = ["sdl2/bundled"]

[dependencies]
webrogue_gfx = { workspace = true }
sdl2 = { version = ">=0.37.0" }

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
zip-extract = { version = "0.2.1" }
